# monte_carlo_stock_sim

./: Cargo.toml  README.md  stock_data.csv
app_gui/: Cargo.toml
app_gui/src/: main.rs
app_gui/ui/: appwindow.slint
core_sim/: Cargo.toml
core_sim/src/: lib.rs
data_io/: Cargo.toml
data_io/src/: lib.rs
